examples/test/testpolicy5303.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5303
  namespace: namespace493
spec:
  podSelector:
    matchLabels:
      key6: value3
      key23: value9
      key7: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value20
          key28: value34
          key22: value29
      podSelector:
        matchLabels:
          key36: value31
